--- a/assignment-3/package.json
+++ b/assignment-3/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "udemy-node",
+  "name": "assingment-2",
   "version": "0.0.1",
+  "description": "",
   "main": "app.js",
   "scripts": {
     "start": "nodemon app.js",
@@ -8,9 +9,7 @@
   },
   "author": "Joni Rämö",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
